--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "node-sass": "^4.14.1",
+    "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-on-screen": "^2.1.1",
     "react-scripts": "4.0.1",
     "react-visibility-sensor": "^5.1.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4",
-    "homepage": "http://xLilianW.github.io/Personal-Site"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
